--- a/envs/default.conf
+++ b/envs/default.conf
@@ -1,6 +1,6 @@
 export APP_ID=xray-ecs  # 8 characters or less with numbers, lowercase letters and hyphens
 export ENV_ID=dev  # 4 characters or less with numbers, lowercase letters and hyphens
-export AWS_PROFILE=ahiratan+demo-Admin
+export AWS_PROFILE=default
 export AWS_REGION=ap-northeast-1
 export VPC_CIDR=10.192.0.0/16
 export PUBLIC_SUBNET_1_CIDR=10.192.10.0/24
